docs(march letter): fixing typo

--- a/docs/letters/monthly/03-01-18.md
+++ b/docs/letters/monthly/03-01-18.md
@@ -28,7 +28,7 @@ _Looking back on the last month, we can learn and grow from..._
 
 * failing to seek out negative feedback. After pitching or presenting our product to someone who ends up reacting positively, I often do not actively seek out negative feedback. In this way, I am not seeking out the thing that will help us grow most.
 
-* failing to articulate the value I believe each of us is uniquely capable of bringing to the team. Myles and I discussed with regards to him being a non-technical founder of a software company. I intend to do a better job of communicating the value that I see each of us bringing to the table.
+* failing to articulate the value I believe each of us is uniquely capable of bringing to the team. Myles and I discussed this with regards to him being a non-technical founder of a software company. I intend to do a better job of communicating the value that I see each of us bringing to the table.
 
 ## Orientation
 
